--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +'%Y%m%d%H%M')" >> $GITHUB_OUTPUT
     - uses: actions/checkout@v3
+    - name: 'Login to GitHub Container Registry'
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{github.actor}}
+        password: ${{secrets.GITHUB_TOKEN}}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: |
+        docker build . --file Dockerfile --tag ghcr.io/arnaud-feldmann/http_exercice:${{ steps.date.outputs.date }} --tag ghcr.io/arnaud-feldmann/http_exercice:latest
+        docker push ghcr.io/arnaud-feldmann/http_exercice --all-tags
