--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,9 +16,12 @@ jobs:
     - name: Get current date
       id: date
       run: echo "date=$(date +'%Y%m%d%H%M')" >> $GITHUB_OUTPUT
-    - uses: actions/checkout@v3
-    - name: 'Login to GitHub Container Registry'
-      uses: docker/login-action@v3
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
       with:
         registry: ghcr.io
         username: ${{github.actor}}
