--- a/helm_rpi/values.yaml
+++ b/helm_rpi/values.yaml
@@ -8,8 +8,8 @@ image:
   repository: ghcr.io/arnaud-feldmann/http_exercice
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "202402292348"
-  digest: "sha256:2517399b5e91b8f66b8c190b88a7ad228fddfd1a09b7894f43094c07cd43655b"
+  tag: "202403010140"
+  digest: "sha256:4ed3bd9771b0b885dcfc069aa07d02ed7c25d3013fa4ed3bbbdc3b12f5a224ac"
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -40,21 +40,21 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: ClusterIP
   port: 55555
-  nodePort: 30000
+  targetPort: 80
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: afeldmann.ddns.net
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
