--- a/helm_rpi/values.yaml
+++ b/helm_rpi/values.yaml
@@ -5,11 +5,12 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/arnaud-feldmann/http_exercice
+  repository: ghcr.io/arnaud-feldmann/http_exercice 
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "202403010140"
   digest: "sha256:4ed3bd9771b0b885dcfc069aa07d02ed7c25d3013fa4ed3bbbdc3b12f5a224ac"
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -42,7 +43,6 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 55555
-  targetPort: 80
 
 ingress:
   enabled: true
@@ -51,26 +51,26 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: afeldmann.ddns.net
+    - host: afeldmann.fr
       paths:
         - path: /
-          pathType: Prefix
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
 
-resources:
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  limits:
-    cpu: 1000m
-    memory: 1Gi
-  requests:
-    cpu: 1000m
-    memory: 1Gi
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
 
 livenessProbe:
   httpGet:
